fix: message box alignment

--- a/src/components/Messages/Messages.css
+++ b/src/components/Messages/Messages.css
@@ -31,7 +31,7 @@
 }
 
 .message-item-contact {
-	@apply text-lg mb-1;
+	@apply text-lg mb-1 capitalize;
 }
 
 .message-item-unread-count {
